--- a/ressources.html
+++ b/ressources.html
@@ -21,8 +21,11 @@
 		<li><a href="https://github.com/postcss/autoprefixer">Autoprefixer-GithubVersion</a><br>
 		autocompletes code for different Browsers
 		</li>
-		<li><a href="http://www.cssdrive.com/cssautoprefixer/">Autoprefixer</a><br>
+		<li><a class="tr-5" href="http://www.cssdrive.com/cssautoprefixer/">Autoprefixer</a><br>
 		autocompletes code for different Browsers
+		</li>
+		<li><a class="tr-6" href="https://www.w3schools.com/">W3School</a><br>
+		Begginers Bible
 		</li>
 	</ul>
 </body>
